---------------------------------------------------------------------------------------------------
Version: 0.1.34
Date: ????
  Compatibility:
    - Handle darkness_to_turn_on default value in night vision equipment
---------------------------------------------------------------------------------------------------
Version: 0.1.33
Date: 2024-03-23
  Bug fixes:
    - Handle technologies that use shared tables (Compatibility with Warptorio 2)
  Compatibility:
     - Added compatibility with Cargo Ships, Constructron-Continued, AAI Programmable Vehicles
---------------------------------------------------------------------------------------------------
Version: 0.1.32
Date: 2024-03-10
  Changelog:
    - Higher quality nightvision stays on longer
  Bug fixes:
    - Fixes to overlay optimizations in high game tick numbers
---------------------------------------------------------------------------------------------------
Version: 0.1.31
Date: 2024-03-06
  Changes:
    - Disabled "total raw" from quality items to increase performance
  Bug fixes:
    - Turrets now get the expected damage bonuses from research
    - Energy and fluid turrets now do not get extra damage from quality
---------------------------------------------------------------------------------------------------
Version: 0.1.30
Date: 2024-02-27
  Changes:
    - Added settings to draw quality on entities within a distance to the players or selected entities
---------------------------------------------------------------------------------------------------
Version: 0.1.29
Date: 2024-02-16
  Changes:
    - Correct rounding for quality bonuses
  Bug fixes:
    - Fix for empty quality bonus string
    - Fix for hand-crafting recipes with forbidden quality
---------------------------------------------------------------------------------------------------
Version: 0.1.28
Date: 2024-01-29
  Changes:
    - Ordered settings rather than random
    - Support for quality on friendly units